# noise_monitor

./: .gitignore  README.md  config.env
backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  mosquitto.conf  openssl.cnf  pyproject.toml
backend/scripts/: compile_protobuf.sh  mosquitto_add_user.sh  mosquitto_setup_certificates.sh
backend/src/: main.py  message.py  settings.py
backend/src/auth/: crud.py  routes.py  schemas.py
backend/src/database/: __init__.py  database.py  models.py
backend/src/iot/: crud.py  mqtt.py  routes.py  schemas.py
backend/src/shared/: func.py  schemas.py
embedded/: .gitignore  Dockerfile  README.md  docker-compose.yml  partition.csv  platformio.ini
embedded/include/project/: ble.h  config.h  config_manager.h  connection.h  message_consts.h  mqtt.h
embedded/scripts/: _setup_consts.py  build.sh  prebuild.sh  send.sh
embedded/simulation/: diagram.json  wokwi.toml
embedded/src/project/: ble.cpp  config_manager.cpp  connection.cpp  id.cpp  main.cpp  message_consts.cpp  mqtt.cpp
frontend/noise_monitor/: .gitignore  Dockerfile  Dockerfile.cirrus  README.md  docker-compose.yml  pubspec.yaml
frontend/noise_monitor/ios/Runner/: Info.plist
frontend/noise_monitor/lib/: main.dart
frontend/noise_monitor/linux/: CMakeLists.txt  my_application.cc
frontend/noise_monitor/scripts/: setup.sh
frontend/noise_monitor/web/: index.html  manifest.json
frontend/noise_monitor/windows/: CMakeLists.txt
proto/: ESPConfig.options  ESPConfig.proto  ESPSetup.options  ESPSetup.proto  NoiseMeasurement.options  NoiseMeasurement.proto
(+28 files in other folders)
